--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     ],
     "require": {
         "magento/framework": "^103.0",
-        "magento/module-store": "^101.1"
+        "magento/module-customer": "^103.0",
+        "magento/module-eav": "^102.1",
+        "magento/module-store": "^101.1",
+        "webonyx/graphql-php": "^14.5"
     },
     "minimum-stability": "stable",
     "repositories": [
